# quorum

./: CLAUDE.md  Cargo.toml  README.md  bug_list.md
crates/account-service/: Cargo.toml  build.rs
crates/account-service/config/: account_service.yaml
crates/account-service/src/: account.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  pb.rs  precision.rs  server.rs
crates/account-service/src/pb/: account.desc  account.proto  account.rs
crates/account-service/src/repository/: account_repo.rs  mod.rs  operation_repo.rs
crates/account-service/src/services/: account_service_impl.rs  mod.rs
crates/api/: Cargo.toml  build.rs
crates/api-gateway/: Cargo.toml  build.rs
crates/api-gateway/src/: grpc.rs  handlers.rs  lib.rs  main.rs  middleware.rs  pb.rs  router.rs  ws_proxy.rs
crates/api-gateway/src/handlers/: health.rs  market.rs  mod.rs  order.rs  portfolio.rs  prediction_market.rs  user.rs  wallet.rs
crates/api-types/: Cargo.toml  build.rs
crates/api-types/src/: lib.rs
crates/api-types/src/pb/: auth.rs  order.rs  user.rs
crates/api/src/: auth.rs  auth_service.desc  lib.rs  market_data.rs  matching.desc  matching.rs  order.rs  order_service.desc  portfolio.rs  portfolio_service.desc  prediction_market.desc  prediction_market.rs  risk.rs  risk_service.desc  user.rs  wallet.desc  wallet.rs
crates/auth-service/: Cargo.toml  build.rs
crates/auth-service/src/: errors.rs  lib.rs  main.rs  models.rs  repository.rs  service.rs
crates/auth-service/src/pb/: auth_service.proto  mod.rs
crates/clearing-service/: Cargo.toml
crates/clearing-service/src/: lib.rs  settlement.rs
crates/common/: Cargo.toml
crates/common/cache/: Cargo.toml
crates/common/cache/config/: config.yaml
crates/common/cache/src/: client.rs  config.rs  lib.rs
crates/common/db/: Cargo.toml
crates/common/db/config/: config.yaml
crates/common/db/src/: config.rs  lib.rs  migration.rs  pool.rs
crates/common/queue/: Cargo.toml
crates/common/queue/config/: config.yaml
crates/common/queue/src/: config.rs  consumer.rs  consumer_handler.rs  kafka_consumer.rs  kafka_producer.rs  lib.rs  producer.rs
crates/common/rate_limiter/: Cargo.toml
crates/common/rate_limiter/src/: lib.rs  middleware.rs  traits.rs
crates/common/registry/: Cargo.toml
crates/common/registry/src/: discovery.rs  error.rs  lib.rs  registry.rs  types.rs
crates/common/src/: constants.rs  error.rs  lib.rs  types.rs
crates/common/src/types/: account.rs  asset.rs  market.rs  mod.rs  order.rs  position.rs  risk.rs  trade.rs  user.rs  wallet.rs
crates/common/tests/: types_test.rs
crates/common/utils/: Cargo.toml
crates/common/utils/src/: cipher.rs  constants.rs  lib.rs  token.rs  wallet.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/market_data/: mod.rs
crates/domain/src/order/: mod.rs
crates/matching-engine/: Cargo.toml  build.rs
crates/matching-engine/src/: engine.rs  event_emitter.rs  lib.rs  main.rs  orderbook.rs  server.rs  types.rs
crates/matching-engine/src/api/: commands.rs  events.rs  types.rs
crates/matching-engine/src/core/: exchange.rs  orderbook.rs  snapshot.rs
crates/matching-engine/src/pb/: matching.proto
crates/order-service/: Cargo.toml  build.rs
crates/order-service/config/: config.yaml
crates/order-service/src/: config.rs  handlers.rs  kafka_consumer.rs  kafka_producer.rs  lib.rs  main.rs  models.rs  order_manager.rs  pb.rs  queue_consumer.rs  queue_producer.rs  server.rs
crates/order-service/src/pb/: order_service.proto
crates/order-service/src/repository/: event_repo.rs  mod.rs  order_repo.rs
crates/order-service/src/services/: mod.rs  order_service.rs
crates/order-service/tests/: order_test.rs
crates/portfolio-service/: Cargo.toml  build.rs
crates/portfolio-service/src/: account.rs  clearing.rs  config.rs  errors.rs  ledger.rs  lib.rs  main.rs  models.rs  position.rs  repository.rs  service.rs
crates/portfolio-service/src/pb/: mod.rs  portfolio_service.proto
crates/portfolio-service/tests/: portfolio_test.rs
crates/prediction-market-service/: Cargo.toml  build.rs
crates/prediction-market-service/config/: prediction-market-service.yaml
crates/prediction-market-service/src/: config.rs  lib.rs  main.rs  models.rs  pb.rs  server.rs
crates/prediction-market-service/src/pb/: prediction_market.proto  prediction_market.rs
crates/prediction-market-service/src/repository/: market_repo.rs  mod.rs  outcome_repo.rs  position_repo.rs
crates/prediction-market-service/src/services/: market_service.rs  mod.rs
crates/prediction-market-service/tests/: prediction_market_test.rs
crates/risk-service/: Cargo.toml  build.rs
crates/risk-service/src/: config.rs  errors.rs  lib.rs  main.rs  risk_manager.rs  rules.rs  service.rs
crates/risk-service/src/pb/: risk_service.proto
crates/risk-service/tests/: risk_test.rs
crates/user-service/: Cargo.toml  build.rs
crates/user-service/config/: user-service.yaml
crates/user-service/src/: config.rs  lib.rs  main.rs  server.rs
crates/user-service/src/errors/: auth_error.rs  mod.rs
crates/user-service/src/handlers/: mod.rs  user_handler.rs
crates/user-service/src/models/: mod.rs  risk.rs  session.rs  tag.rs  user.rs  wallet.rs
crates/user-service/src/pb/: user.proto  user.rs
crates/user-service/src/repository/: auth_repo.rs  mod.rs  user_repo.rs  wallet_repo.rs
crates/user-service/src/services/: auth_impl.rs  auth_service.rs  mod.rs  user_service.rs  wallet_service.rs
crates/user-service/tests/: user_service_test.rs
crates/wallet-service/: Cargo.toml  build.rs
crates/wallet-service/src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  wallet.rs
crates/wallet-service/src/pb/: mod.rs  wallet.proto  wallet.rs
crates/wallet-service/src/repository/: deposit_repo.rs  mod.rs  payment_password_repo.rs  whitelist_repo.rs  withdraw_repo.rs
crates/wallet-service/tests/: wallet_test.rs
crates/ws-prediction/: Cargo.toml
crates/ws-prediction/config/: ws-prediction.yaml
crates/ws-prediction/src/: lib.rs  main.rs  queue_consumer.rs  server.rs  session.rs
(+193 files in other folders)
