[package]
name = "account-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
db = { path = "../common/db", features = ["sqlite", "postgres"] }
domain = { path = "../domain" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "sqlite"] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
tonic-reflection = { workspace = true }

# Config
serde_yaml = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lints.rust]
unsafe_code = "forbid"