[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
api = { path = "../api" }
registry.workspace = true
tokio = { workspace = true }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }

# WebSocket proxy
tokio-tungstenite = "0.21"
futures-util = "0.3"

[features]
default = ["cookie"]
cookie = ["salvo/cookie"]
jwt-auth = ["salvo/jwt-auth"]