[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Async trait (for service trait definitions)
async-trait = "0.1"

# Time types
chrono = { workspace = true }

