[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono"] }

# Redis
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }

# Utils
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }

# gRPC
tonic = { workspace = true, features = ["prost"] }
prost = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
