[package]
name = "order-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
utils = { path = "../common/utils" }
domain = { path = "../domain" }
api = { path = "../api" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
tonic-reflection = { workspace = true }
async-trait = { workspace = true }

# Database
db = { path = "../common/db" }
sqlx = { workspace = true, features = ["sqlite"] }

# Queue
queue = { path = "../common/queue" }

# Config
config = { workspace = true }
serde_yaml = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }