[package]
name = "portfolio-service"
version = "0.1.0"
edition = "2021"
description = "Portfolio Service - 账户余额、持仓、结算清算、账本流水"
authors = ["Quorum Team"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
tonic = { version = "0.12", features = ["prost"] }
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }

# Common
common = { path = "../common" }
domain = { path = "../domain" }

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"
