[package]
name = "portfolio-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# gRPC
tonic = { workspace = true, features = ["prost"] }
prost = { workspace = true }
api = { path = "../api" }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "rust_decimal"] }
db = { path = "../common/db" }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Time
chrono = { workspace = true, features = ["serde"] }

# Utils
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["serde", "serde-with-str", "db-postgres"] }

# Queue
common = { path = "../common" }

[build-dependencies]
tonic-build = { workspace = true }
