[package]
name = "risk-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# gRPC
tonic = { workspace = true, features = ["prost"] }
prost = { workspace = true }
api = { path = "../api" }
async-trait = { workspace = true }

# Utils
rust_decimal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }

