[package]
name = "user-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# 公共库
common = { path = "../common" }
db = { path = "../common/db" }
cache = { path = "../common/cache" }
domain = { path = "../domain" }

# Async runtime
tokio = { workspace = true }

# Web framework (用于 gRPC server)
salvo = { workspace = true }
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Config
serde_yaml = { workspace = true }
thiserror = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
bcrypt = "0.15"
rand = "0.8"
hex = "0.4"
rust_decimal = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = "0.12"