[package]
name = "wallet-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["serde", "serde-with-str"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }

api = { path = "../api" }

# gRPC
tonic = { workspace = true, features = ["prost"] }
prost = { workspace = true }
async-trait = { workspace = true }

# Database
db = { path = "../common/db" }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono"] }

# Config
config = { workspace = true }
serde_yaml = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
