[package]
name = "cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "script"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Config
thiserror.workspace = true
tracing.workspace = true
serde_yaml.workspace = true

# Utils
async-trait = "0.1"