[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Config
thiserror.workspace = true
tracing.workspace = true
serde_yaml.workspace = true

[features]
default = ["postgres", "sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]